Fixed About section alignment

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .section h2 {
